syntax = "proto3";
package org.example.grpc;

message HelloRequest {
  uint64 id = 1;
  string firstName = 2;
  string lastName = 3;
}

message HelloResponse {
  string greeting = 1;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
}